# PG2

./: .gitignore  CMakeLists.txt  README.md  ShaderProgram.cpp  ShaderProgram.hpp  app.cpp  app.hpp  app_settings.json  assets.hpp  imgui.ini  main.cpp
.run/: PG2.run.xml
resources/: basic.frag  basic.vert
src/: AnimatedTexture.cpp  AnimatedTexture.hpp  Camera.cpp  Camera.hpp  Cube.cpp  Cube.hpp  Light.h  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  OBJloader.cpp  OBJloader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp  app.cpp  app.hpp  assets.hpp  gl_err_callback.cpp  gl_err_callback.h  main.cpp
